--- a/app/sass/_main.scss
+++ b/app/sass/_main.scss
@@ -3,12 +3,12 @@ body {
   	font-family: 'Bitter', serif;
   	font-size: 17px;
   	font-weight: 400;
-	line-height: 25px;
-	background-color: #f2f2f2;
+	  line-height: 25px;
+	  background-color: #f2f2f2;
 }
 
 .blog-page {
-	padding-top: 320px;
+	// padding-top: 320px;
 	// position: relative;
 
 	&:before {
@@ -35,6 +35,7 @@ body {
 	}
 
 	.wrap-in {
+		margin-top: 320px;
 		padding: 42px 80px 60px;
 	}
 
@@ -191,16 +192,32 @@ body {
 .com-item {
 	display: flex;
 	justify-content: space-between;
-	margin-bottom: 40px;
+	margin-bottom: 38px;
 
 	&:first-of-type {
 		border-bottom: 2px solid #f2f2f2;
 		padding-bottom: 10px;
 	}
+
+	&:nth-of-type(4) {
+		margin-bottom: 19px;
+	}
+
+	&:last-of-type {
+		margin-bottom: 30px;
+	}
+}
+
+.com-item > .com-data > .com-form {
+	margin-bottom: 20px;
+}
+
+.com-item:nth-of-type(3) > .com-data > ul {
+		margin-top: 27px;
 }
 
 .com-user-pic {
-	width: 82px;
+	  width: 82px;
     height: 82px;
     border: 2px solid #ebedee;
     border-radius: 5px;
@@ -222,6 +239,11 @@ body {
 
 .com-user-info {
 	line-height: 25px;
+	margin-bottom: 20px;
+
+	// &:nth-of-type(3) {
+	// 	margin-bottom: 35px;
+	// }
 }
 
 .com-user-box {
@@ -230,6 +252,7 @@ body {
 
 .com-user-text {
 	margin-bottom: 7px;
+	font-size: 16px;
 }
 
 .com-form {
@@ -253,6 +276,7 @@ body {
 
 		&::placeholder {
 			color: $lightgrey;
+			font-size: 16px;
 		}
 	}
 
@@ -329,9 +353,9 @@ body {
 	display: flex;
 }
 
-.com-user-btns {
-	margin-bottom: 20px;
-}
+// .com-user-btns {
+// 	margin-bottom: 20px;
+// }
 
 .com-btn-edit,
 .com-btn-del,
@@ -356,8 +380,8 @@ body {
 }
 
 .reply-item {
-	margin-top: 20px;
-	margin-bottom: 32px;
+	// margin-top: 20px;
+	margin-bottom: 22px;
 
 	&:last-of-type {
 		margin-bottom: 0;
@@ -412,7 +436,7 @@ body {
 		position: absolute;
 		height: 2px;
 		background-color: #f2f2f2;
-		width: 35%;
+		width: 37%;
 		top: 50%;
 		z-index: 0;
 	}
@@ -428,10 +452,10 @@ body {
 
 .load-more {
 	position: relative;
-	padding: 14px 18px;
+	padding: 4px 15px;
 	color: $grey;
 	background-color: $white;
-	font-size: 17px;
+	font-size: 16px;
 	font-weight: 400;
 	line-height: 30px;
 	border: 2px solid #f2f2f2;
